emojivoto/kubernetes/web.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: emojivoto
    app.kubernetes.io/version: v11
  name: web
spec:
  # When using HPA, this line must be commented so that ArgoCD doesn't manage
  # the number of replicas and instead leaves that to HPA
  replicas: 3
  selector:
    matchLabels:
      app: web-svc
      version: v11
  template:
    metadata:
      labels:
        app: web-svc
        version: v11
    spec:
      containers:
      - env:
        - name: WEB_PORT
          value: "8080"
        - name: EMOJISVC_HOST
          value: emoji-svc:8080
        - name: VOTINGSVC_HOST
          value: voting-svc:8080
        - name: INDEX_BUNDLE
          value: dist/index_bundle.js
        - name: EMOJI_SECRET_VALUE
          valueFrom:
            secretKeyRef:
              name: emoji-voto-secrets
              key: emoji-voto-secret
        image: docker.l5d.io/buoyantio/emojivoto-web:v11
        name: web-svc
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            cpu: 100m
      serviceAccountName: web
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: web-svc
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: clusterissuer-binbash-cert-manager-clusterissuer
    kubernetes.io/ingress.class: private-apps
    kubernetes.io/tls-acme: "true"
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: emojivoto
    app.kubernetes.io/version: v11
  name: emojivoto
spec:
  rules:
  - host: emojivoto.devstg.aws.binbash.com.ar
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-svc
            port:
              number: 80
  tls:
  - hosts:
    - emojivoto.devstg.aws.binbash.com.ar
    secretName: emojivoto-private-tls
---
# apiVersion: autoscaling/v2beta2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: web
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: web
#   minReplicas: 1
#   maxReplicas: 5
#   metrics:
#   - type: Resource
#     resource:
#       name: cpu
#       target:
#         type: Utilization
#         averageUtilization: 50
